setting meta tag (google or facebook)

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,35 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>NgxHmDnd</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="author" content="SHANG-TING">
+  <meta name="copyright" content="SHANG-TING">
+
+  <link rel="author" href="https://github.com/SHANG-TING">
+  <link rel="publisher" href="https://github.com/SHANG-TING">
+  <meta name="description" content="ngx-hm-dnd - BookCategory Branch。">
+
+  <meta itemprop="name" content="NgxHmDnd BookCategory">
+  <meta itemprop="image" content="/ngx-hm-dnd/assets/title.png">
+  <meta itemprop="description" content="ngx-hm-dnd - BookCategory Branch。">
+
+  <meta content="/ngx-hm-dnd/assets/title.png" property="og:image" />
+  <meta content="GitHub" property="og:site_name" />
+  <meta content="object" property="og:type" />
+  <meta content="SHANG-TING/ngx-hm-dnd/bookCategory" property="og:title" />
+  <meta content="https://SHANG-TING.github.io/ngx-hm-dnd/" property="og:url" />
+  <meta content="ngx-hm-dnd - BookCategory Branch。" property="og:description" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
